2005-02-23  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* VERSION :
	* configure.ac :

	  - Version 0.0.2.

	* lib/network.c :
	* lib/network.h :

	  - Cleanup: removed rlist typedef from header file.

	  - Now uses an efficient queue instead of making recursive calls to
	    add().

	  - Fixed logic error in adding to queue / network (the second for
	    loop).

	* test/test.c :

	  - Added another node in test network.

	* lib/list.c :
	* lib/list.h :
	* lib/network.c :

	  - Added head and tail list operations (add, get, del) for
	    efficiency.

	* configure.ac :
	* test/Makefile.in :

	  - Added a LIBDIR variable to allow libtribe and its headers to be
	    the dependencies of the test program.

2005-02-22  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* test/Makefile.in :

	  - test only gets built if --enable-debug is specified in configure.

	* VERSION :

	  - Added VERSION file.

	* configure.ac :

	  - Removed CXX definitions carried over from vlad.

	* ChangeLog :

	  - Started change log.