@@ -247,7 +247,7 @@ int tbe_net_add_rel(tbe_net *a_net,
                     unsigned int a_int2,
                     unsigned int a_relset)
 {
-  int retval;
+  int retval = TBE_OK;
   tbe_net_rqueue rqueue;
 
   if (!a_net)
@@ -259,7 +259,7 @@ int tbe_net_add_rel(tbe_net *a_net,
   if ((retval = tbe_net_rqueue_enq(&rqueue, a_int1, a_int2, a_relset)) != TBE_OK)
     return retval;
 
-  while (tbe_list_length(rqueue)) {
+  while (tbe_list_length(rqueue) && retval == TBE_OK) {
     unsigned int i;
     unsigned int int1;
     unsigned int int2;
@@ -267,99 +267,73 @@ int tbe_net_add_rel(tbe_net *a_net,
     unsigned int old_rs;
 
     /* get relation from queue */
-    if ((retval = tbe_net_rqueue_deq(&rqueue, &int1, &int2, &new_rs)) != TBE_OK) {
-      tbe_list_purge(&rqueue, NULL);
-      return retval;
-    }
+    if ((retval = tbe_net_rqueue_deq(&rqueue, &int1, &int2, &new_rs)) != TBE_OK)
+      break;
 
     /* first, we check what we already know about the relationship between
      * a_int1 and a_int2: this should not be zero */
     if (TBE_REL_SET_ISCLEAR(old_rs = tbe_net_rel(*a_net, int1, int2))) {
-      tbe_list_purge(&rqueue, NULL);
-      return TBE_FAILURE;
+      retval = TBE_FAILURE;
+      break;
     }
  
     /* we then take the intersection of the new relation and what is already
      * in the network: again, should not be zero */
     if (TBE_REL_SET_ISCLEAR(new_rs = TBE_REL_SET_INTERSECT(new_rs, old_rs))) {
-      tbe_list_purge(&rqueue, NULL);
-      return TBE_FAILURE;
+      retval = TBE_FAILURE;
+      break;
     }
 
     /* now we add this new relation in the network */
-    if ((retval = tbe_net_add_rel_noprop(a_net, int1, int2, new_rs)) != TBE_OK) {
-      tbe_list_purge(&rqueue, NULL);
-      return retval;
-    }
+    if ((retval = tbe_net_add_rel_noprop(a_net, int1, int2, new_rs)) != TBE_OK)
+      break;
  
-    /* go through all intervals k to find r(k,j), given r1(k,i), r2(i,j) */
-    for (i = 0; i < tbe_list_length(*a_net); i++) {
+    /* go through all intervals k that is not int1 and int2 */
+    for (i = 0; i < tbe_list_length(*a_net) && retval == TBE_OK; i++) {
       unsigned int rs1;
       unsigned int rs2;
       unsigned int rs3;
       tbe_net_node *nnode = NULL;
  
-      if ((retval = tbe_list_get_index(*a_net, i, (void *) &nnode)) != TBE_OK) {
-        tbe_list_purge(&rqueue, NULL);
-        return retval;
-      }
+      if ((retval = tbe_list_get_index(*a_net, i, (void *) &nnode)) != TBE_OK)
+        break;
  
       if (nnode->interval == int1 || nnode->interval == int2)
         continue;
- 
+
+      /* find r(k,j) given r1(k,i) and r2(i,j) */
       rs1 = tbe_net_rel(*a_net, nnode->interval, int1);
       rs2 = tbe_net_rel(*a_net, nnode->interval, int2);
       rs3 = TBE_REL_SET_INTERSECT(rs2, tbe_rel_set_lookup(rs1, new_rs));
 
       /* paranoid check: none of these relations should be zero */
       if (TBE_REL_SET_ISCLEAR(rs1) || TBE_REL_SET_ISCLEAR(rs2) || TBE_REL_SET_ISCLEAR(rs3)) {
-        tbe_list_purge(&rqueue, NULL);
-        return TBE_FAILURE;
+        retval = TBE_FAILURE;
+        break;
       }
 
       /* now check if rs3 is more specific that what is already in the network.
        * in other words, check if rs3 is a proper subset of rs2 */
-      if (rs2 != rs3 && TBE_REL_SET_UNION(rs2, rs3) == rs2) {
-        if ((retval = tbe_net_rqueue_enq(&rqueue, nnode->interval, int2, rs3)) != TBE_OK) {
-          tbe_list_purge(&rqueue, NULL);
-          return retval;
-        }
-      }
-    }
+      if (rs2 != rs3 && TBE_REL_SET_UNION(rs2, rs3) == rs2)
+        if ((retval = tbe_net_rqueue_enq(&rqueue, nnode->interval, int2, rs3)) != TBE_OK)
+          break;
  
-    /* go through all intervals k to find r(i,k), given r1(i,j), r2(j,k) */
-    for (i = 0; i < tbe_list_length(*a_net); i++) {
-      unsigned int rs1;
-      unsigned int rs2;
-      unsigned int rs3;
-      tbe_net_node *nnode = NULL;
- 
-      if ((retval = tbe_list_get_index(*a_net, i, (void *) &nnode)) != TBE_OK) {
-        tbe_list_purge(&rqueue, NULL);
-        return retval;
-      }
- 
-      if (nnode->interval == int1 || nnode->interval == int2)
-        continue;
- 
+      /* find r(i,k), given r1(i,j), r2(j,k) */
       rs1 = tbe_net_rel(*a_net, int2, nnode->interval);
       rs2 = tbe_net_rel(*a_net, int1, nnode->interval);
       rs3 = TBE_REL_SET_INTERSECT(rs2, tbe_rel_set_lookup(new_rs, rs1));
 
       /* paranoid check: none of these relations should be zero */
       if (TBE_REL_SET_ISCLEAR(rs1) || TBE_REL_SET_ISCLEAR(rs2) || TBE_REL_SET_ISCLEAR(rs3)) {
-        tbe_list_purge(&rqueue, NULL);
-        return TBE_FAILURE;
+        retval = TBE_FAILURE;
+        break;
       }
  
       /* now check if rs3 is more specific that what is already in the network.
        * in other words, check if rs3 is a proper subset of rs2 */
-      if (rs2 != rs3 && TBE_REL_SET_UNION(rs2, rs3) == rs2) {
-        if ((retval = tbe_net_rqueue_enq(&rqueue, int1, nnode->interval, rs3)) != TBE_OK) {
-          tbe_list_purge(&rqueue, NULL);
-          return retval;
-        }
-      }
+      if (rs2 != rs3 && TBE_REL_SET_UNION(rs2, rs3) == rs2)
+        if ((retval = tbe_net_rqueue_enq(&rqueue, int1, nnode->interval, rs3)) != TBE_OK)
+          break;
     }
   }
 
