@@ -1,3 +1,13 @@
+2005-03-02  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
+
+	* lib/network.c :
+
+	  - Cleanup so we dont have to purge the queue everytime we see
+	    an error condition in tbe_net_add_rel().
+
+	  - A little bit of cleanup. no point having 2 for loops in
+	    tbe_net_add_rel().
+
 2005-02-23  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
 	* VERSION :
